# ramp-hacks-dhilan-gabe

./: CONTEXT-MAP.md  LICENSE  README.md  pyproject.toml
apps/distillery-demo/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
apps/inference/: README.md
apps/web/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
containers/benchmark/: Dockerfile
containers/huge_backup/: container_contract.json
containers/inference/: .dockerignore  Dockerfile  container_entrypoint.py  requirements-serve.txt
docs/: README.md  architecture.md  artifact-hash-verification.md  byodt.md  decisions-finance-world-v2.md  decisions-qwen72b-fallback.md  decisions.md  finance-agent-review-disposition.md  finance-agent.md  integration-assumptions.md  offline-precomputed-fallback.md  pitch-2min.md  pitch-30s.md  qwen72b-review-disposition.md  runbook-aws-api-deploy.md  runbook-clean-machine.md
examples/: finance_generalist.py  held_out_selector.py  offline_fallback.py  verify_artifacts.py
experiments/: __init__.py
infra/ecr/: deploy.sh  (+1 more)
project1/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
project1/apps/api/distillery_api/: main.py  planner.py  store.py
project1/data/api/datasets/: ds_1e7dd487eece2864.json
project1/data/api/datasets/ds_1e7dd487eece2864/: test_iid.jsonl
project1/data/api/tmp_gen/: metadata.json  test_ood.jsonl  train.jsonl  validation.jsonl
project1/examples/: compare_demo.py  fable_traces.py  finance_generalist.py  live_server.py  local_distill_bedrock.py  sm_launch.py  sm_train.py  tui_demo.py
project1/runs_local/: baseline.manifest.json  custom.manifest.json  demo_data.json  eval_baseline.json  label_stats.json  teacher_eval.json
project1/runs_local/baseline/integrity/: SHA256SUMS
project1/runs_local/baseline/model/adapter/: adapter_config.json
project1/src/distillery/contracts/: dataset.py  errors.py  manifest.py  proof.py  recipes.py
project1/src/distillery/data/: generate.py  oracle.py  renderers.py  validate.py  world.py
project1/src/distillery/recipes/: auto.py  custom.py
project1/src/distillery/synthesis/: teacher.py
project1/src/distillery/training/: entrypoint.py
project1/tests/: test_core.py  test_custom_recipes.py
project2/: README.md  pyproject.toml
project2/apps/api/proof_api/: main.py
project2/examples/: custom_recipe.py
project2/src/proof/: __init__.py  data.py  gate.py  metrics.py  resources.py  service.py
project2/src/proof/backends/: base.py  bedrock.py  mock.py
project2/src/proof/recipes/: __init__.py  base.py
project2/src/proof/recipes/builtin/: managed.py  rejection.py
project2/tests/: test_proof.py
video/: hyperframes.json  index.html  meta.json
web/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
(+554 files in other folders)
