[project]
name = "distillery"
version = "0.1.0"
description = "Distillery: Smaller models. Proven economics. TinyFable finance-generalist distillation platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ramp Hackathon" }]
dependencies = [
  "pydantic>=2.10,<3",
  "pydantic-core>=2.27,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "boto3>=1.35,<2",
  "mangum>=0.19,<1",
  "rfc8785>=0.1.4",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
ml = [
  "torch==2.4.1; sys_platform != 'linux'",
  "transformers==4.46.3",
  "peft==0.13.2",
  "bitsandbytes==0.44.1",
  "accelerate==1.1.1",
  "safetensors==0.4.5",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "hypothesis>=6.119,<7",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distillery"]

[tool.uv]
package = true
# Linux training images supply torch==2.4.1+cu124. Override transitive
# peer requirements so syncing the extra cannot layer PyPI CUDA wheels.
override-dependencies = [
  "torch==2.4.1; sys_platform != 'linux'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
