[project]
name = "distillery"
version = "0.1.0"
description = "Distillery: Curate -> Synthesize -> Train -> Prove distillation platform. Smaller models. Proven economics."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
train = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.12",
    "datasets>=2.20",
    "accelerate>=0.33",
    "bitsandbytes>=0.43; sys_platform == 'linux'",
]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distillery", "packages/sdk/distillery_sdk", "apps/api/distillery_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
