[project]
name = "proof"
version = "0.1.0"
description = "Proof — quality-gated AI spend optimizer with user-defined distillation recipes"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "boto3>=1.34",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
